externalname/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
  type: ExternalName
  externalName: stiff.kushikimi.xyz
